feat(ui): add basic layout  (#34)
closes #24
connect to #24

--- a/services/frontend/src/language/en.json
+++ b/services/frontend/src/language/en.json
@@ -1,17 +1,13 @@
 {
   "translations": {
-
     "settingsTitle": "Settings",
     "settingsLanguages": "English/Spanish",
     "settingsNotifications": "Notifications",
-
     "notFound": "Not found",
-
     "accountTitle": "My Account",
-
     "drawerLinkHome": "Home",
     "drawerLinkSettings": "Settings",
-
-    "homeTitle": "Hack the Planet!"
+    "HomeInputLabel": "300 CHARACTERS",
+    "HomeInputPlaceholder": "Type your greeting..."
   }
 }
