fix(frontend): copy updates in home (#37)
# Changes
1. Rename input label
2. Remove finger print icon
3. Fix redirect to setting 

# Steps to test
1. `git remote add mahcr git@github.com:mahcr/eos-local.git`
2. `git checkout home-updates`
3. Run the project and go to `localhost:3000`

PD: Project review will be done in a separate ticket

--- a/services/frontend/src/language/en.json
+++ b/services/frontend/src/language/en.json
@@ -8,6 +8,7 @@
     "drawerLinkHome": "Home",
     "drawerLinkSettings": "Settings",
     "HomeInputLabel": "300 CHARACTERS",
-    "HomeInputPlaceholder": "Type your greeting..."
+    "HomeInputPlaceholder": "Type your greeting..."  ,
+    "chatLabel": "Greeting"
   }
 }
